# electrod

./: .gitattributes  .gitignore  .merlin  .ocamlformat  .ocp-indent  .travis.yml  AUTHORS.md  CHANGES.md  INSTALL.md  Makefile  README.md  _tags  dune  dune-project  dune-workspace  dune-workspace.release  electrod.opam  electrod.opam.locked  myocamlbuild.ml  run_tests.qtestpack
.github/workflows/: binaries.yml  build.yml  main.yml
api/: index.html
api/electrod/: index.html
api/electrod/Libelectrod/: index.html
api/electrod/Libelectrod/Ast/: index.html
api/electrod/Libelectrod/Ast_to_elo/: index.html
api/electrod/Libelectrod/Atom/: index.html
api/electrod/Libelectrod/Domain/: index.html
api/electrod/Libelectrod/Elo/: index.html
api/electrod/Libelectrod/Elo_recursor/: index.html
api/electrod/Libelectrod/Elo_to_ltl1/: index.html
api/electrod/Libelectrod/Elo_to_ltl_intf/: index.html
api/electrod/Libelectrod/Elo_to_model1/: index.html
api/electrod/Libelectrod/Elo_to_smv1/: index.html
api/electrod/Libelectrod/Exp_bounds/: index.html
api/electrod/Libelectrod/Fmtc/: index.html
api/electrod/Libelectrod/Gen_goal/: index.html
api/electrod/Libelectrod/Gen_goal_recursor/: index.html
api/electrod/Libelectrod/Instance/: index.html
api/electrod/Libelectrod/Intf/: index.html
api/electrod/Libelectrod/Invar_computation/: index.html
api/electrod/Libelectrod/Location/: index.html
api/electrod/Libelectrod/Msg/: index.html
api/electrod/Libelectrod/Name/: index.html
api/electrod/Libelectrod/Outcome/: index.html
api/electrod/Libelectrod/Parser/: index.html
api/electrod/Libelectrod/Parser_main/: index.html
api/electrod/Libelectrod/Raw/: index.html
api/electrod/Libelectrod/Raw_ident/: index.html
api/electrod/Libelectrod__Ast/: index.html
api/electrod/Libelectrod__Ast_to_elo/: index.html
api/electrod/Libelectrod__Atom/: index.html
api/electrod/Libelectrod__Domain/: index.html
api/electrod/Libelectrod__Elo/: index.html
api/electrod/Libelectrod__Elo_recursor/: index.html
api/electrod/Libelectrod__Elo_to_ltl1/: index.html
api/electrod/Libelectrod__Elo_to_ltl_intf/: index.html
api/electrod/Libelectrod__Elo_to_model1/: index.html
api/electrod/Libelectrod__Elo_to_smv1/: index.html
api/electrod/Libelectrod__Exp_bounds/: index.html
api/electrod/Libelectrod__Fmtc/: index.html
api/electrod/Libelectrod__Gen_goal/: index.html
api/electrod/Libelectrod__Gen_goal_recursor/: index.html
api/electrod/Libelectrod__Instance/: index.html
api/electrod/Libelectrod__Intf/: index.html
api/electrod/Libelectrod__Invar_computation/: index.html
api/electrod/Libelectrod__Location/: index.html
api/electrod/Libelectrod__Msg/: index.html
api/electrod/Libelectrod__Name/: index.html
api/electrod/Libelectrod__Outcome/: index.html
api/electrod/Libelectrod__Parser/: index.html
api/electrod/Libelectrod__Parser_main/: index.html
api/electrod/Libelectrod__Raw/: index.html
api/electrod/Libelectrod__Raw_ident/: index.html
api/electrod/Libelectrod__Raw_to_ast/: index.html
api/electrod/Libelectrod__Relation/: index.html
api/electrod/Libelectrod__Scanner/: index.html
api/electrod/Libelectrod__Scope/: index.html
api/electrod/Libelectrod__Scripts/: index.html
api/electrod/Libelectrod__Shortnames/: index.html
api/electrod/Libelectrod__Simplify1/: index.html
api/electrod/Libelectrod__Simplify2/: index.html
api/electrod/Libelectrod__Smv/: index.html
api/electrod/Libelectrod__Smv_trace_parser/: index.html
api/electrod/Libelectrod__Smv_trace_scanner/: index.html
api/electrod/Libelectrod__Smv_trace_tokens/: index.html
api/electrod/Libelectrod__Solver/: index.html
api/electrod/Libelectrod__Symbol/: index.html
api/electrod/Libelectrod__Symmetry/: index.html
api/electrod/Libelectrod__Transfo/: index.html
api/electrod/Libelectrod__Tuple/: index.html
api/electrod/Libelectrod__Tuple_set/: index.html
api/electrod/Libelectrod__Var/: index.html
doc/: api.odocl  intro.base  intro.htmlp  style.css
harness/: Test.ml
lib/: Domain.ml  Elo.ml  Elo_to_SMV1.ml  Exp_bounds.mli  GenGoalRecursor.ml  Invar_computation.ml  Name.mli  Outcome.ml  Raw_ident.ml  Raw_ident.mli  SMV.ml  SMV_trace_scanner.mll  Scope.mli  Simplify2.ml  Solver.mli  Transfo.mli  Tuple.ml  Tuple.mli
main/: Main.ml  electrod.ml
opam/: descr  electrod.install
regression/: dune  hotel-badsafety-3.md  ring-badliveness-4.md
regression.t/: .dune.~undo-tree~  .run.t.~undo-tree~  run.t
res/: nusmv-default-script.scr  nuxmv-default-bmc-script.scr  nuxmv-default-script.scr  version
src/: Ast.ml  Ast.mli  Ast_to_elo.ml  Atom.ml  Atom.mli  Bound.ml  Bound.mli  Cooked_to_elo.ml  Domain.ml  Domain.mli  Elo.ml  Elo.mli  Elo2.ml  Elo2_recursor.ml  Elo2_to_LTL_intf2.ml  Elo2_to_SMV1.ml  Elo2_to_ltl2.ml  Elo2_to_model1.ml  Elo_cleanup.ml  Elo_cleanup.mli  Elo_goal.ml  Elo_goal_recursor.ml  Elo_recursor.ml  Elo_to_LTL.ml  Elo_to_LTL.mli  Elo_to_LTL1.ml  Elo_to_LTL2.ml  Elo_to_LTL_intf.ml  Elo_to_SMV1.ml  Elo_to_SMV2.ml  Elo_to_ltl1.ml  Elo_to_ltl_intf.ml  Elo_to_model.ml  Elo_to_model1.ml  Elo_to_smv1.ml  Exp_bounds.ml  Exp_bounds.mli  Exp_bounds2.ml  Exp_bounds2.mli  Fmtc.ml  (+90 more)
test/: add_mul_props.elo  arity.elo  comprehension1.elo  comprehension2.elo  comprehension3.elo  dune  empty_run.elo  enums1.elo  event.elo  family.elo  family2.elo  hotel.elo  ifthenelse.elo  ifthenelse.t  join.elo  relational.elo  relational.t  shifts.elo  test-divide.elo  test.md  test1.elo  test10.elo  test11.elo  test12.elo  test13.elo  test2.elo  test3.elo  test4.elo  test5.elo  test6.elo  test7.elo  test8.elo  test9.elo  test_aite.elo  test_invars.elo  test_no_ints_card.elo  test_tc.elo  translation1.elo
test/fatal/: fatal01.elo  fatal02.elo  fatal03.elo  fatal04.elo  fatal05.elo  fatal06.elo  fatal07.elo  fatal08.elo  fatal09.elo  fatal10.elo  fatal11.elo  fatal12.elo  fatal13.elo  fatal14.elo
test/warning/: warning01.elo  warning02.elo  warning03.elo
util/: electrod-mode.el  release-workflow.txt  release1.sh  start-release.sh
util/headache/: headache.sh  header
(+132 files in other folders)
