opam-version: "1.2"
name: "electrod"
version: "0.1.1"
maintainer: "David Chemouil <david.chemouil+git@onera.fr>"
authors: ["David Chemouil" "Julien Brunel"]
homepage: "https://forge.onera.fr/projects/electrod"
bug-reports: "https://github.com/grayswandyr/electrod/issues"
license: "MPL-2.0"
dev-repo: "https://github.com/grayswandyr/electrod.git"
build: [
  [make] { ocaml-native & (os = "linux" | os = "darwin")}
]
remove: ["ocamlfind" "remove" "electrod"]
depends: [
  "ocamlfind" {build}
  "ocamlbuild" {build}
  "cmdliner" 
  "containers" 
  "gen" 
  "sequence" 
  "logs" 
  "fmt" 
  "menhir" 
  "mtime" 
  "ppx_deriving" 
  "visitors" 
  "hashcons" 
  "ppx_blob"
	"printbox"
]
available: [ocaml-version >= "4.04"]
