opam-version: "1.2"
name: "electrod"
maintainer: "David Chemouil <david.chemouil+git@onera.fr>"
authors: ["David Chemouil" "Julien Brunel"]
homepage: "https://github.com/grayswandyr/electrod/"
bug-reports: "https://github.com/grayswandyr/electrod/issues"
license: "MPL-2.0"
dev-repo: "https://github.com/grayswandyr/electrod.git"
build: [
  ["jbuilder" "subst"] {pinned}
  ["jbuilder" "build" "-p" name "-j" jobs]
]
build-test: [["jbuilder" "runtest" "-p" name "-j" jobs]]
depends: [
  "ocamlfind" {build}
  "ocamlbuild" {build}
  "topkg" {build & >= "0.9.0"} 
  "cmdliner" 
  "containers" 
  "gen" 
  "sequence" 
  "logs" 
  "fmt" 
  "menhir" 
  "mtime" 
  "ppx_deriving" 
  "visitors" 
  "hashcons" 
  "ppx_blob"
	"printbox"
]
available: [ocaml-version >= "4.04"]
